--- a/index.html
+++ b/index.html
@@ -515,10 +515,9 @@
                 
                 <h4 style="margin: 20px 0 10px 0; color: #7b68ee;">✅ Passos a seguir:</h4>
                 <ol>
-                    <li><strong>Criar uma lista de tarefas no ClickUp</strong> para seu projeto escolhido</li>
+                    <li><strong>Criar uma lista de tarefas no ClickUp</strong> para sua viagem</li>
                     <li><strong>Definir responsáveis e prazos</strong> realistas para cada tarefa</li>
                     <li><strong>Criar subtarefas e checklists</strong> detalhados</li>
-                    <li><strong>Compartilhar o resultado</strong> com a turma para discussão</li>
                 </ol>
             </div>
 
