alterado o tema do projeto

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="activity-steps">
                 <h3>📋 Sua Missão:</h3>
                 <p style="margin: 15px 0; font-size: 1.1rem;">
-                    <strong>Projeto:</strong> Organizar um evento fictício (festa de formatura, workshop, conferência, etc.)
+                    <strong>Projeto:</strong> Organizar um planejamento para sua viagem
                 </p>
                 
                 <h4 style="margin: 20px 0 10px 0; color: #7b68ee;">✅ Passos a seguir:</h4>
