--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
             <h1>📋 ClickUp</h1>
             <p>Ferramenta de Gestão e Produtividade</p>
             <p style="font-size: 1.1rem; color: #7b68ee; font-weight: 600;">Organização, Colaboração e Resultados em um só lugar</p>
+            <link rel="stylesheet" href="clickup.com">
         </div>
 
         <div class="navigation">
@@ -544,6 +545,7 @@
                 <p style="font-size: 1.1rem; margin-top: 15px;">
                     Ao final desta atividade, vocês terão experiência prática com o ClickUp e poderão aplicar esses conhecimentos em projetos reais!
                 </p>
+                <link rel="stylesheet" href="https://classroom.google.com/c/NzkxMzA1NTkyMDY0/a/NzgwMTc3MjMxMTQy/details">
             </div>
         </div>
     </div>
