--- a/index.html
+++ b/index.html
@@ -248,12 +248,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <h1>📋 ClickUp</h1>
-            <p>Ferramenta de Gestão e Produtividade</p>
-            <p style="font-size: 1.1rem; color: #7b68ee; font-weight: 600;">Organização, Colaboração e Resultados em um só lugar</p>
-            <link rel="stylesheet" href="clickup.com">
-        </div>
+        <div class="header" style="text-align: center; margin-bottom: 25px;">
+    <h1>📋 ClickUp</h1>
+    <p>Ferramenta de Gestão e Produtividade</p>
+    <p style="font-size: 1.1rem; color: #7b68ee; font-weight: 600;">
+        Organização, Colaboração e Resultados em um só lugar
+    </p>
+    <a href="https://clickup.com" 
+       target="_blank" 
+       style="display: inline-block; margin-top: 10px; background: #7b68ee; color: white; padding: 10px 20px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+        🌐 Acessar ClickUp
+    </a>
+</div>
+
 
         <div class="navigation">
             <button class="nav-btn active" onclick="showSection('intro')">O que é?</button>
@@ -541,12 +548,17 @@
             </div>
 
             <div style="background: linear-gradient(45deg, #4facfe, #00f2fe); color: white; padding: 25px; border-radius: 15px; margin-top: 30px; text-align: center;">
-                <h3 style="color: white; border: none; padding: 0;">🏆 Objetivo Final</h3>
-                <p style="font-size: 1.1rem; margin-top: 15px;">
-                    Ao final desta atividade, vocês terão experiência prática com o ClickUp e poderão aplicar esses conhecimentos em projetos reais!
-                </p>
-                <link rel="stylesheet" href="https://classroom.google.com/c/NzkxMzA1NTkyMDY0/a/NzgwMTc3MjMxMTQy/details">
-            </div>
+    <h3 style="color: white; border: none; padding: 0;">🏆 Objetivo Final</h3>
+    <p style="font-size: 1.1rem; margin-top: 15px;">
+        Ao final desta atividade, vocês terão experiência prática com o ClickUp e poderão aplicar esses conhecimentos em projetos reais!
+    </p>
+    <a href="https://classroom.google.com/c/NzkxMzA1NTkyMDY0/a/NzgwMTc3MjMxMTQy/details" 
+       target="_blank" 
+       style="display: inline-block; margin-top: 15px; background: white; color: #4facfe; padding: 10px 20px; border-radius: 8px; text-decoration: none; font-weight: bold;">
+        📎 Acessar Atividade
+    </a>
+</div>
+
         </div>
     </div>
 
